# crecall

./: .gitignore  QUICKSTART.md  README.md  crec.py  diagnose_search.py  drecall.py  pyproject.toml  requirements.txt
.drecall/: config.toml  config.toml.example  search_history.txt
config/: default.yaml  express.yaml  gemma.yaml  lite.yaml  nomic-128.yaml  nomic-256.yaml  nomic-768.yaml
docs/: MODEL_SELECTION.md
src/: __init__.py
src/classifiers/: __init__.py  rule_based.py  transformer.py
src/cli/: main.py
src/contracts/: __init__.py  classifier.py  detector.py  importer.py  normalizer.py  refiner.py  storage.py  vectorizer.py
src/core/: __init__.py  checksums.py  config.py  hcs_engine.py  memory_manager.py  pipeline.py  registry.py  reindexer.py  segmentation.py  user_config.py
src/importers/: __init__.py  chatgpt.py
src/models/: __init__.py  hcs.py  normalized.py  processed.py  search.py
src/normalizers/: __init__.py  markdown.py
src/refiners/: __init__.py  llama_cpp.py
src/storage/: __init__.py  sqlite_vector.py
src/storage/migrations/: 002_disaggregate_schema.py
src/tui/: __init__.py  app.py  tui_app.py
src/vectorizers/: __init__.py  embedding_gemma.py  nomic_embed.py  sentence_transformer.py
